# MidiHero

./: CMakeLists.txt  Game.cpp  Game.hpp  Makefile  Never-Gonna-Give-You-Up-sax.mid  Note.cpp  Note.hpp  README.md  main.cpp  outfle  test
src/: Game.cpp  Game.hpp  Makefile  Note.hpp
